fixed navbar cross + overflow

--- a/serveur_react/src/App.css
+++ b/serveur_react/src/App.css
@@ -79,10 +79,9 @@ li a.dropdown-toggle::after {
 .sidebar-header > span {
     position: relative;
     float: right;
-    margin: 0.5em;
-    font-size: 2rem;
+    font-size: 25px;
     cursor: pointer;
-    display: none;
+    display:none;
 }
 
 .side-menu {
@@ -110,6 +109,7 @@ li a.dropdown-toggle::after {
     padding: 20px;
     margin-left: 0;
     height: 100vh;
+    overflow-y: auto;
 }
 
 @media only screen and (max-width: 500px) {
@@ -128,7 +128,7 @@ li a.dropdown-toggle::after {
         transition: all 0.5s, height 0s;
     }
 
-    .sidebar.is-open > .sidebar-header span {
+    .sidebar-header > span {
         display: unset;
     }
 
